Reverted functionality which don't exists until Java 11