@@ -6,7 +6,6 @@ import sortpom.parameter.PluginParameters;
 
 import java.io.*;
 import java.net.URL;
-import java.nio.charset.Charset;
 import java.nio.charset.UnsupportedCharsetException;
 import java.nio.file.Files;
 import java.util.Optional;
@@ -80,9 +79,9 @@ public class FileUtil {
      */
     public String getPomFileContent() {
         String content;
-        try {
-            content = Files.readString(pomFile.toPath(), Charset.forName(encoding));
-        } catch (UnsupportedCharsetException ex) {
+        try (InputStream inputStream = new FileInputStream(pomFile)) {
+            content = IOUtils.toString(inputStream, encoding);
+       } catch (UnsupportedCharsetException ex) {
             throw new FailureException("Could not handle encoding: " + encoding, ex);
         } catch (IOException ex) {
             throw new FailureException("Could not read pom file: " + pomFile.getAbsolutePath(), ex);
